--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "ts-x-file",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "A smart way to manage your File.",
     "main": "lib/ts-x-file.ts",
     "types": "lib/ts-x-file.d.ts",
     "repository": "https://github.com/stveljko012/ts-x-file.git",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest --config jestconfig.json",
+        "build": "tsc"
     },
     "peerDependencies": {
         "rxjs-observable": "^0.0.7"
@@ -22,7 +23,7 @@
         "size"
     ],
     "author": "Veljko Stanojevic <stveljko012@gmail.com>",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {},
     "devDependencies": {
         "@types/jest": "^25.1.2",
