--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "jest": "^25.1.0",
         "ts-jest": "^25.2.0",
         "typescript": "^3.7.5"
-    }
+    },
+    "files": [
+        "lib/**/*"
+    ]
 }
